--- a/extensions/url-extractor/manifest.json
+++ b/extensions/url-extractor/manifest.json
@@ -1,5 +1,6 @@
 {
   "manifest_version": 3,
+  "description": "Extracts all links from the current page and displays them in a popup.",
   "name": "Link Extractor",
   "version": "1.0",
   "icons": {
@@ -13,7 +14,8 @@
     "activeTab",
     "scripting",
     "contextMenus",
-    "storage"
+    "storage",
+    "tabs"
   ],
   "optional_permissions": [
     "offscreen"
@@ -23,11 +25,5 @@
   },
   "background": {
     "service_worker": "scripts/background.js"
-  },
-  "content_scripts": [
-    {
-      "matches": ["<all_urls>"],
-      "js": ["scripts/content.js"]
-    }
-  ]
+  }
 }
